[tool.poetry]
name = "econ-analysis-gbm2118"
version = "0.1.2"
description = "A package for loading, merging and analyzing econand governance data"
authors = ["Gorata Malose"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GorataB/econ_analysis"
repository = "https://github.com/GorataB/econ_analysis"

packages = [
    { include = "econ_analysis_gbm2118", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.3.3"
numpy = "^2.3.5"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
pytest = "^9.0.2"
openpyxl = "^3.1.5"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "myst-nb (>=1.3.0,<2.0.0)",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]
